--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.0.1+1
+  http: ^0.13.4
+  flutter_carplay: ^1.0.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
